More Functionality added and Refactoring: - Refactored rendering of warning icons by applyWarningToCell method. - getIconOffset method used to calculate right-offset of warnings icons to   prevent overlapping when multiple warnings are present. - Added Not Available Warning check onto schedule checker. - Warnings will avoid redundancy previously rendered warnings of the same id. - Updated multi-name splitting by omit a name that included a single char   from their last name as a differentiator for similar first names. - Updated names rendered to be employee.str_alias rather than first_name. - Updated Roster's str_aliases to reflect proper naming conventions. - findUnavailables() is called in parser's constructor to predefine the   names unavailable for each day, for subsequent calls to check on availability. - Employee name filter dropdown should properly reselect first element for   each invocation of check schedule button. - Added subtle border 'highlighting' when filter is set to an employee - Updated better img for paste button in textArea
TODO:
- Add filtering option for "?", "!", "x" warnings                   [ ]
- Hide filter employee dropdown prior to check schedule click       [ ]
- Update new warnings into timesheet as well!                       [ ]
- Add warnings (shift count - ?within dropdown)                     [ ]
- ?Searchable Dropdown Web Component?                               [ ]
- ?Refactor eveningShiftWarning to ref cells vs. week day column    [ ]
- ?Change On-Call "!" to some time icon                             [ ]
- Add all staff to roster vs. refactor to two diff rosters...       [ ]

Previous TODOs:
- Add reset function for subsequent schedule checking               [x]
- Add function for "filtering" employees on schedule (?opacity)     [x]
- Easier way to nav location of cell without sticky headers      nah[~]

--- a/public/style.css
+++ b/public/style.css
@@ -25,12 +25,12 @@ textarea {
   border: none;
   margin: 0;
   padding: 0.5em;
-  color: #aaa;
   background-color: white;
+  opacity: 0.3;
   transition: 300ms;
 }
 .textareaPaste:hover {
-  color: #555;
+  opacity: 0.7;
 }
 
 select {
